Formatting the change

--- a/postdocs.html
+++ b/postdocs.html
@@ -37,8 +37,8 @@ title: Postdocs
                                     {{stu.user-id}}
                                 </div>
                                 <div>
-    				<strong>Office: Room </strong>
-    				{{stu.office}}
+    				<strong>Office: </strong>
+    				Room {{stu.office}}
 				</div>
 
                                 <div>
