Minor display text changes

--- a/students-intphd.html
+++ b/students-intphd.html
@@ -44,12 +44,12 @@ title: Integrated Ph.D. Students
                       </h4>
                     </div>
                     <div>
-                      <strong>UserID:</strong>
+                      <strong>UserID: </strong>
                       {{stu.user-id}}
                     </div>
                     <div>
     		  <strong>Office:</strong>
-    		  {{stu.office}}
+    		  Room {{stu.office}}
 		</div>
                   </div>
                     <div class="col-md-2">
