--- a/students-phd.html
+++ b/students-phd.html
@@ -52,7 +52,7 @@ title: Ph.D. Students
                 </div>
                 <div>
     		  <strong>Office:</strong>
-    		  {{stu.office}}
+    		  Room {{stu.office}}
 		</div>
               </div>
                 <div class="col-md-2">
