--- a/publ.html
+++ b/publ.html
@@ -52,6 +52,7 @@ title: Publications - Dept of Mathematics, IISc
     <code>$\text{ {% if paper.author %} {{ paper.author }}{% else %} {{paper.editor}} (Ed.){% endif %}, }$</code>
     <em>{{ paper.title }}</em>, {{ paper.journal }} {{ paper.booktitle }} {{ paper.note }}, <strong>{{paper.volume}} </strong> ({{paper.year}}), {{paper.pages}}{{ paper.article }}.
     {% if paper.url %}(<a href="{{ paper.url }}" target="_blank">Article</a>){% endif %}
+    {% if paper.doi %}(<a href="https://doi.org/{{ paper.doi }}" target="_blank">doi:{{ paper.doi }}</a>){% endif %}
     {% if paper.mrnumber %}(<a href="https://mathscinet.ams.org/mathscinet/search/publdoc.html?pg1=MR&s1=MR{{ paper.mrnumber }}" target="_blank">Review</a>){% endif %}
   </li>
 {% endfor %}
