PSS24 Spelling Mistake fix

--- a/PSS24.html
+++ b/PSS24.html
@@ -154,7 +154,7 @@ li a {
          <td style="text-align: center" bgcolor="lightyellow">Coffee</td></tr>
 
 <tr><td>3:45-4:30</td>
-                        <td><div class="span4"><a href="#purba" style="text-decoration:none; color:black">Purba Banarjee</a></div></td>
+                        <td><div class="span4"><a href="#purba" style="text-decoration:none; color:black">Purba Banerjee</a></div></td>
 
                         <td><div class="span4"><a href="#arnab" style="text-decoration:none; color:black">Arnab Pal</a></div></td></tr>
      <tr><td>4:30-5:15</td>
