Changes in schedule - PSS24
Karambir Das will Join Online
DebaPrasanna Kar and Ritvik will swap their talks' timings.

--- a/PSS24.html
+++ b/PSS24.html
@@ -143,12 +143,14 @@ li a {
                             <td colspan="4" style="text-align: center" bgcolor="lightyellow">Lunch</td></tr>
      <tr><td rowspan="5" style="text-align: center">II</td><td>2:00-2:45</td>
                         <td rowspan="5" style="text-align: center">Sourish <br> Maniyar</td>
-                        <td><div class="span4"><a href="#karambir" style="text-decoration:none; color:black">Karambir Das</a></div></td>
+                        <td><div class="span4"><a href="#karambir" style="text-decoration:none; color:black">Karambir Das (Online)</a></div></td>
                         <td rowspan="5" style="text-align: center">Annapurna <br> Banik</td>
                         <td><div class="span4"><a href="#agniva" style="text-decoration:none; color:black">Agniva Chatterjee</a></div></td></tr>
      <tr><td>2:45-3:30</td>
         <td><div class="span4"><a href="#jnaneshwar" style="text-decoration:none; color:black">Jnaneshwar Baslingker</a></div></td>
-                        <td><div class="span4"><a href="#debaprasanna" style="text-decoration:none; color:black">Debaprasanna Kar</a></div></td></tr>
+                        
+                        <td><div class="span4"><a href="#ritvik" style="text-decoration:none; color:black">Ritvik Saharan</a></div></td></tr>
+                        
      </td><td bgcolor="lightyellow">3:30-3:45</td>
          <td style="text-align: center" bgcolor="lightyellow">Coffee</td>
          <td style="text-align: center" bgcolor="lightyellow">Coffee</td></tr>
@@ -158,7 +160,7 @@ li a {
 
                         <td><div class="span4"><a href="#arnab" style="text-decoration:none; color:black">Arnab Pal</a></div></td></tr>
      <tr><td>4:30-5:15</td>
-                        <td><div class="span4"><a href="#ritvik" style="text-decoration:none; color:black">Ritvik Saharan</a></div></td>
+                        <td><div class="span4"><a href="#debaprasanna" style="text-decoration:none; color:black">Debaprasanna Kar</a></div></td>
                         <td><div class="span4"><a ></a></div></td></tr>
     <tr><td colspan="6" style="text-align: center" bgcolor="beige">Click on the speaker's name to navigate to their title and abstract.</td> </tr>
     <tr><td colspan="6" style="text-align: center" bgcolor="beige">Some tips for giving good math talks are placed at the end of this page.</td> </tr>
@@ -247,16 +249,17 @@ data-target="#purba">
 <!---------------------->
 <!---------------------->
 
-<section class="" id="ritvik"
-data-target="#ritvik">
-<hr size="4" , width=100%">
-<p style="color:maroon"><b>Ritvik Saharan</b></p>
+<section class="" id="debaprasanna"
+                data-target="#debaprasanna">
+                <hr size="4" , width=100%">
+                <p style="color:maroon"><b>Debaprasanna Kar</b></p>
 
-<p><b>Ribbon Concordance of Knots is a partial order.</b></p>
+                <p><b>Weighted boundary limits of the Kobayashi--Fuks metric on h-extendible domains</b></p>
 
-<p><b>Abstract.</b> In this talk, we shall go through Ian Agol's proof of a conjecture by Gordon which held that ribbon concordances are partially ordered. We first note that a concordance between knots $K_0$ and $K_1$ is a smooth embedding of an annulus $C = e( S^1 \times [0,1] )$ in $S^3$ with $e( S^1 \times \{0\} )$ being isotopic to $K_0$ and $e(S^1 \times \{1\} )$ being isotopic to $K_1$ . Now we project it to $[0,1]$ and if this turns out to be a Morse function with critical points having an index of $0$ or $1$ only, then we say that $C$ is a ribbon concordance from $K_1$ to $K_0$ which may also be written as $K_1 \geq K_0$ .  By considering the representation varieties of the knot groups to $SO(n)$ and the relations between them, the partial ordering of ribbon concordance shall be shown.
-   </p>
- </section>
+                <p><b>Abstract.</b> The Ricci curvature of the Bergman metric on a bounded domain $D \subset \mathbb{C}^n$ is strictly bounded above by $n+1$ and consequently $\log (K_D^{n+1} g_D)$, where $K_D$ is the Bergman kernel for $D$ on the diagonal and $g_D$ is the Riemannian volume element of the Bergman metric on $D$, is the potential for a K\"ahler metric on $D$ known as the Kobayashi--Fuks metric. We will study the boundary behavior of the Kobayashi--Fuks metric on the class of h-extendible domains. In particular we derive the non-tangential boundary asymptotics of the Kobayashi--Fuks metric and its Riemannian volume element by the help of some maximal domain functions and then using their stability results on h-extendible local models.
+                </p>
+               </section>
+
 
 
 <!---------------------->
@@ -322,17 +325,17 @@ data-target="#sankar">
  <!---------------------->
 
 
-                <section class="" id="debaprasanna"
-                data-target="#debaprasanna">
-                <hr size="4" , width=100%">
-                <p style="color:maroon"><b>Debaprasanna Kar</b></p>
+                <section class="" id="ritvik"
+data-target="#ritvik">
+<hr size="4" , width=100%">
+<p style="color:maroon"><b>Ritvik Saharan</b></p>
 
-                <p><b>Weighted boundary limits of the Kobayashi--Fuks metric on h-extendible domains</b></p>
+<p><b>Ribbon Concordance of Knots is a partial order.</b></p>
 
-                <p><b>Abstract.</b> The Ricci curvature of the Bergman metric on a bounded domain $D \subset \mathbb{C}^n$ is strictly bounded above by $n+1$ and consequently $\log (K_D^{n+1} g_D)$, where $K_D$ is the Bergman kernel for $D$ on the diagonal and $g_D$ is the Riemannian volume element of the Bergman metric on $D$, is the potential for a K\"ahler metric on $D$ known as the Kobayashi--Fuks metric. We will study the boundary behavior of the Kobayashi--Fuks metric on the class of h-extendible domains. In particular we derive the non-tangential boundary asymptotics of the Kobayashi--Fuks metric and its Riemannian volume element by the help of some maximal domain functions and then using their stability results on h-extendible local models.
-                </p>
-               </section>
-
+<p><b>Abstract.</b> In this talk, we shall go through Ian Agol's proof of a conjecture by Gordon which held that ribbon concordances are partially ordered. We first note that a concordance between knots $K_0$ and $K_1$ is a smooth embedding of an annulus $C = e( S^1 \times [0,1] )$ in $S^3$ with $e( S^1 \times \{0\} )$ being isotopic to $K_0$ and $e(S^1 \times \{1\} )$ being isotopic to $K_1$ . Now we project it to $[0,1]$ and if this turns out to be a Morse function with critical points having an index of $0$ or $1$ only, then we say that $C$ is a ribbon concordance from $K_1$ to $K_0$ which may also be written as $K_1 \geq K_0$ .  By considering the representation varieties of the knot groups to $SO(n)$ and the relations between them, the partial ordering of ribbon concordance shall be shown.
+   </p>
+ </section>
+ 
 
                 <!---------------------->
                 <!---------------------->
