--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
         <div><strong> Title: </strong>
           {% if sem.series %}<a href="{% if sem.website %}{{ sem.website }}#{{ sem.date | date: " %Y-%m-%d" }}{% else
             %}{{ sem.series | slugify }}.html#{{ sem.date | date: "%Y-%m-%d" }}-{{ sem.speaker | slugify }}{% endif %}"
-            class="{{ sem.series | slugify }}">{{sem.series}}: </a>{% endif %}
+            class="{{ sem.series | slugify }}">{{ sem.series-prefix }} {{sem.series}}{% if sem.series-suffix %}
+            {{sem.series-suffix}}{% endif %}: </a>{% endif %}
           <a href="{{ site.baseurl}}{{ sem.url }}.html">{{ sem.title }}</a>
         </div>
         <div> <strong>Speaker: </strong> {{sem.speaker}} </div>
